docs finished, bulk update categories to do
